Cambios en contacto y portfolio
Vamos para la publicación

--- a/contacto.html
+++ b/contacto.html
@@ -43,27 +43,30 @@
               <h3 class="masthead-brand">LeoCondori.Arg</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Sobre mi</a></li>
+                  <li><a href="#">Sobre mi</a></li>
                   <li><a href="portfolio.html">Portfolio</a></li>
-                  <li><a href="contacto.html">Contacto</a></li>
+                  <li class="active"><a href="contacto.html">Contacto</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Mi mundo</h1>
-            <p class="lead">Soy periodista; programador y siempre emprendedor. Especializado en I+D. Nuevas tecnologías. Asesoramiento y consultoría.</p>
+            <h1 class="cover-heading">Contacto</h1>
+            <p class="lead">Para hacerme una consulta o cualquier otro tipo de preguntas deje su consulta abajo</p>
             
-            <form role="form" method="POST" action="http://www.mascotasvqr.com/mejoras/leo/test.php" id="fo3" name="fo3">
+            <form role="form" method="POST" action="http://www.mascotasvqr.com/mejoras/leo/contactoapp.php" id="fo3" name="fo3">
          		<div id="result">
             		<p class="lead">
             					<div class="form-group">
-									<label for="nombre">*email</label>
-									<input type="text" class="form-control" id="leermas" name="leermas" placeholder="Ej: lcondori@gmail.com" required>
-									<p class="help-block">* Ingresa tu email para saber más sobre mi</p>
+									<label for="email">*email</label>
+									<input type="mail" class="form-control" id="email" name="email" placeholder="Ej: lcondori@gmail.com" required>
 								</div>
-              		<button type="submit" class="btn btn-lg btn-default">Leer más sobre mí...</button>
+            					<div class="form-group">
+									<label for="comentarios">Comentarios</label>
+									<textarea class="form-control" rows="3" id="comentarios" name="comentarios" placeholder="Escriba sus comentarios" required></textarea>
+								</div>								
+              		<button type="submit" class="btn btn-lg btn-default">Enviar</button>
             		</p>
             	</div>
             </form>
