--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
               <h3 class="masthead-brand">LeoCondori.Arg</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Sobre mi</a></li>
-                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="#">Sobre mi</a></li>
+                  <li class="active"><a href="portfolio.html">Portfolio</a></li>
                   <li><a href="contacto.html">Contacto</a></li>
                 </ul>
               </nav>
@@ -52,18 +52,16 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Mi mundo</h1>
-            <p class="lead">Soy periodista; programador y siempre emprendedor. Especializado en I+D. Nuevas tecnologías. Asesoramiento y consultoría.</p>
+            <h1 class="cover-heading">Mi portfolio</h1>
+            <p class="lead">Aquí mis trabajaron se irán actualizando a diario</p>
             
-            <form role="form" method="POST" action="http://www.mascotasvqr.com/mejoras/leo/test.php" id="fo3" name="fo3">
+            <form role="form" method="POST" action="http://www.mascotasvqr.com/mejoras/leo/portfolioapp.php" id="fo3" name="fo3">
          		<div id="result">
             		<p class="lead">
             					<div class="form-group">
-									<label for="nombre">*email</label>
-									<input type="text" class="form-control" id="leermas" name="leermas" placeholder="Ej: lcondori@gmail.com" required>
-									<p class="help-block">* Ingresa tu email para saber más sobre mi</p>
+									<input type="hidden" class="form-control" id="verportfolio" name="verportfolio" placeholder="Ej: lcondori@gmail.com" required>
 								</div>
-              		<button type="submit" class="btn btn-lg btn-default">Leer más sobre mí...</button>
+              		<button type="submit" class="btn btn-lg btn-default">ver mi portfolio</button>
             		</p>
             	</div>
             </form>
